welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:7: error: not found: value baisse
baisse brosse();
^Runner:14: error: not found: value baisse
baisse brosse();
^Runner:21: error: not found: value baisse
baisse brosse();
^Runner:28: error: not found: value baisse
baisse brosse();
^Runner:35: error: not found: value baisse
baisse brosse();
^Runner:42: error: not found: value baisse
baisse brosse();
^Runner:49: error: not found: value baisse
baisse brosse();
^Runner:59: error: value Pink is not a member of object java.awt.Color
setCouleurBrosse(Color.Pink);
                       ^